# w26-capstone-streamlit

./: Dockerfile  Makefile  PackagingInstructions.md  app.py  classifier.py  pyproject.toml
